# games_and_IAs

./: Cargo.toml
src/: home.rs  html_template.rs  main.rs
src/games/: game.rs  game_factory.rs  game_id.rs  get_game.rs  get_game_template.rs  get_games.rs  mod.rs
src/games/game/: dames.rs  game.rs  mod.rs  morpion.rs  puissance4.rs
src/home/: home.rs
src/template_utils/: base_utils.rs  button_utils.rs  htmx_instructions.rs  htmx_instructions_builder.rs  loader.rs  mod.rs  swap_opt.rs
templates/: base.html  game_button.html  game_template.html  games.html  index.html
